syntax = "proto3";

package calculator;


option java_package = "com.proto.calculator";
option java_multiple_files = true;

message AverageRequest {
    int32 numeral = 1;
}

message AverageResponse {
    double averageResult = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service CalculatorService {
    rpc Average (stream AverageRequest) returns (AverageResponse) {
    };

    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {
    };
}
